--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "lodash": "^4.17.21"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.0.1"
   }
 }
